Added some markdown text to the notebook describing the contents...

--- a/myFirstNotebook.ipynb
+++ b/myFirstNotebook.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# My first Jupyter Notebook : CMS PhaseII Tk Trigger Work "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Study \n",
+    "Using [TMTT Software](https://svnweb.cern.ch/cern/wsvn/UK-TrackTrig/software/cmssw/trunkSimpleCode9/README_SimpleCode.txt) to understand the effect of the choice of digitization (for stubs and track parameters) on an algorithm's resolution. \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method \n",
+    "This was done by reducing the number of bits in the configuration parameters of two **TMTrackProducer** processes : \n",
+    "\n",
+    "* **TrackDigi** \n",
+    "    - RtBits , ZBits, BendBits, PhiSectorBits, PhiSBits, PhiOBits\n",
+    "* **StubDigitize** \n",
+    "    - d0Bits , oneOver2rBits , phi0Bits , z0Bits , tanlambdaBits , chisquaredBits\n",
+    "    \n",
+    "and looking at the changes in the resolution of ($z0$,$d0$,$\\eta$,$\\phi$) \n",
+    "for the two fitting algorithms KF4ParamsComb,KF5ParamsComb."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Monte Carlo \n",
+    "Monte Carlo samples used in this study were made with the D17 (=T5) tilted tracker geometry and use Seb Viret's Dec. 2017 stub window sizes which you can find in CMSSW 9.3.7 in file L1Trigger/TrackTrigger/python/TTStubAlgorithmRegister_cfi.py and consist of 1000 $t\\bar{t}$ events with PU200.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
