This time remembered to save before commiting my changes..

--- a/myFirstNotebook.ipynb
+++ b/myFirstNotebook.ipynb
@@ -44,8 +44,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analyis Code \n",
+    "\n",
+    "Now some code to look at the results of the study.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
