--- a/myFirstNotebook.ipynb
+++ b/myFirstNotebook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you would like to see the code used to generate the notebook below then click on show code! By default all code snippets are hidden to make this notebook more legible."
+    "If you would like to see the code used to generate the notebook below then click on show code! By default all code snippets are hidden to make this notebook more legible. "
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "source": [
     "### Study \n",
-    "Using [TMTT Software](https://svnweb.cern.ch/cern/wsvn/UK-TrackTrig/software/cmssw/trunkSimpleCode9/README_SimpleCode.txt) to understand the effect of the choice of digitization (for stubs and track parameters) on an algorithm's resolution. \n",
+    "Using [TMTT Software](https://svnweb.cern.ch/cern/wsvn/UK-TrackTrig/software/cmssw/trunkSimpleCode9/README_SimpleCode.txt) to understand the effect of the choice of digitization (for stubs and track parameters) on an algorithm's resolution. I added more code ...\n",
     "\n",
     "---"
    ]
