Another test commit...

--- a/myFirstNotebook.ipynb
+++ b/myFirstNotebook.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My first Jupyter Notebook : CMS PhaseII Tk Trigger Work "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# My first Jupyter Notebook : CMS PhaseII Tk Trigger Work \n",
+    "\n",
     "If you would like to see the code used to generate the notebook below then click on show code! By default all code snippets are hidden to make this notebook more legible. "
    ]
   },
